2013-04-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py, update.glade: Added support for updating with
	  Ctrl+Enter keys.
	* share/filters.glade: Added tooltips for permanent filters
	  (issue #17).

2013-04-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Fixed Facebook URLs opened from notification
	  (issue #25).
	* facebook/assistant.py: Fixed a Facebook authorization error
	  (issue #26).

2013-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0.3 release.
	* twitter/getauthtoken.py: Updated Twitter OAuth URLs (issue #16).
	  Thanks @gion_XY & @Sururu_s2!

2013-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/entry.py: Removed depends on 'image' template.
	* updatewindow.py, update.glade: Added new short cut keys framework.

2012-12-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* output.py: Added checking for duplicated posts.

2012-12-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/*: Added support for all entry types on Tumblr.

2012-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/api.py, tumblr/account.py: Added support for 'post' &
	  'posts' API.

2012-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/truncatehtml.py: Added HTML truncation for Tumblr.
	* po/id_ID.po: Added new Indonesian translation.  Thanks kuspoes!

2012-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0.2 release.
	* theme.py, com.googlecode.gfeedline.gschema.xml.in: Changed the
	  name of default theme.
	* output.py: Fixed unread flags.

2012-11-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0.1 release.
	* setup.py: Fixed data entries.

2012-11-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0 release.
	* updatewindow.py: Fixed bugs in UpdateWindowOLD &
	  RetweetDialogOLD.

2012-11-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py, facebook/account.py: Added support for auto account
	  selection for drag & drop updateing.
